# rknn_multithread

./: .gitignore  CMakeLists.txt  README.md  build-linux_RK3588_qt.sh  config.json
include/: ThreadPool.hpp  config.h  config_loader.hpp  coreNum.hpp  drm_func.h  postprocess.h  preprocess.h  readme.md  rga_func.h  rkYolov5s.hpp  rknnPool.hpp  rknn_api.h  rknn_matmul_api.h
include/core/: config.hpp  logger.hpp  runtime_config.hpp  types.hpp
include/engine/: inference_engine.hpp  onnx_engine.hpp
include/io/: output_sink.hpp  video_source.hpp
include/manager/: camera_manager.hpp  inference_manager.hpp  inference_worker.hpp  model_manager.hpp
include/pipeline/: preprocessor.hpp
include/ui/: detection_utils.hpp  gui_logger.hpp  mainwindow.hpp  mainwindow.ui  settings_dialog.hpp
src/: MainWindow.cpp  MainWindow.hpp  camera_manager.cpp  gui_logger.cpp  inference_manager.cpp  inference_worker.cpp  main.cpp  model_manager.cpp  onnx_engine.cpp  postprocess.cpp  preprocess.cc  qt_main.cpp  rkYolov5s.cpp  settings_dialog.cpp  video_source.cpp
src/win/: main_win.cpp  mainwindow.cpp  mainwindow_part1.cpp
tools/: convert.py
